--- a/pet-website.html
+++ b/pet-website.html
@@ -3,20 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>My Pet</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
-    <p>pet's name is pet-name</p>
-    <p>pet's favourite toys:</p>
+    <p>pet's name is <strong>sheila</strong></p>
+    <p>My pet has a variety of chew toys </p>
     <ul>
-      <li>toy one</li>
-      <li>toy two</li>
+      <li>the first toy is a red ball</li>
+      <li> <img src="images/red.jpeg" alt="red ball"> </li>
     </ul>
-    <p>pet's favourite food:</p>
-    <ol>
-      <li>food one</li>
-      <li>food two</li>
-      <li>food three</li>
-    </ol>
+    <p>pet's favourite food is cat food:</p>
+      <li> <img src="images/catfood.jpeg" alt="catfood"> </li>
 
-  </body>
+
+
 </html>
